Bug 121525 - DOCX Import formula alignment (centered or right-aligned formulas are left-aligned in Writer)
Summary: DOCX Import formula alignment (centered or right-aligned formulas are left-al...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:7.0.0
Keywords: filter:docx
: 97165 130907 (view as bug list)
Depends on:
Blocks: DOCX-Header-Footer
  Show dependency treegraph
 
Reported: 2018-11-19 14:57 UTC by NISZ LibreOffice Team
Modified: 2020-05-19 19:41 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
An example file with an equation (22.69 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-11-19 14:57 UTC, NISZ LibreOffice Team
Details
A screenshot showcasing the issue. (212.38 KB, image/png)
2018-11-19 14:58 UTC, NISZ LibreOffice Team
Details
The formula in 7.0 master (226.79 KB, image/png)
2020-04-30 07:08 UTC, Attila Bakos (NISZ)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2018-11-19 14:57:14 UTC
Description:
Equation inserted in footer in DOCX documents created with Microsoft Word 2010 aligned left when the document is opened in LibreOffice Writer 6.0.1.1.

Steps to Reproduce:
1. Create a new document in Microsoft Word.
2. Click on Insert, Footer, Edit Footer
3. Click on Insert, and the arrow below the equation
4. Click on choose the second
5. Save the file as DOCX
6. Open the same file in LibreOffice Writer and compare the two versions.

Actual Results:
The equation is aligned left opened in LibreOffice Writer 6.0.1.1.

Expected Results:
The equation should be aligned center.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2018-11-19 14:57:49 UTC
Created attachment 146781 [details]
An example file with an equation
Comment 2 NISZ LibreOffice Team 2018-11-19 14:58:09 UTC
Created attachment 146782 [details]
A screenshot showcasing the issue.
Comment 3 Xisco Faulí 2018-11-19 16:33:36 UTC
Reproduced in

Version: 6.2.0.0.beta1+
Build ID: 268364e35100b559f42d8c02b930c5cca1c84be7
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a)
Comment 4 Durgapriyanka 2018-11-19 16:57:16 UTC
The bug is reproduced.

Microsoft Word 2007

Version: 6.0.6.2
Build ID: 0c292870b25a325b5ed35f6b45599d2ea4458e77
CPU threads: 2; OS: Windows 6.1; UI render: default; 
Locale: en-US (en_US); Calc: group
Comment 5 Buovjaga 2019-01-25 14:13:04 UTC
Already in 3.6.0. Not displayed in 3.5.0.
Comment 6 László Németh 2020-04-29 14:53:51 UTC
*** Bug 130907 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2020-04-29 14:54:09 UTC
Attila Bakos committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8b613c4603047dc24aa9b03fb49f4fe1b65af2a3

tdf#121525 OOXML import: fix formula alignment

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Attila Bakos (NISZ) 2020-04-30 07:08:34 UTC
Created attachment 160110 [details]
The formula in 7.0 master
Comment 9 Attila Bakos (NISZ) 2020-05-07 12:11:01 UTC
*** Bug 97165 has been marked as a duplicate of this bug. ***
Comment 10 Xisco Faulí 2020-05-19 19:41:56 UTC
Verified in

Version: 7.0.0.0.alpha1+
Build ID: 8209c2569f5726f9ed29f75d30efdccb94f98fe5
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Attila, thanks for fixing this issue!!