tdf#121525 OOXML import: fix formula alignment

Formula alignment was not handled at all.
Now "oMathPara", "oMathParaPr" elements
and m:jc attribute are handled using paragraph
alignment, as a workaround.

Co-author: Tibor Nagy

Change-Id: I71546755492e0f9187c77f5324bada6f3c68f0dc